<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33CCFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LightActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/imageViewLogo"
            android:text="@string/title"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/spartan" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_description"
        android:textAlignment="center"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/textViewLabel"
            android:ems="10"
            android:hint="@string/hint" />

        <Button
            android:id="@+id/buttonEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabel"
            android:onClick="enableLight"
            android:layout_marginTop="40dp"
            android:text="@string/enable" />

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonEnable"
            android:layout_below="@+id/editTextInput"
            android:onClick="closeLightActivity"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/buttonEnable"
            android:text="@string/close" />
    </RelativeLayout>

    <SurfaceView
        android:id="@+id/PREVIEW"
        android:layout_width="1dip"
        android:layout_height="1dip" />

</LinearLayout>